OpenHealth/force-app/main/default/force-app/main/default/objects/Allergy__c/Allergy__c.object-meta.xml
<CustomObject>
    <label>Allergy</label>
    <pluralLabel>Allergys</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>