OpenHealth/force-app/main/default/force-app/main/default/objects/Allergy__c/Allergen__c.field-meta.xml
<CustomField>
    <fullName>Allergen__c</fullName>
    <label>Allergen</label>
    <type>Text</type>
    <length>255</length>
</CustomField>