OpenHealth/force-app/main/default/force-app/main/default/objects/Allergy__c/DiagnosedDate__c.field-meta.xml
<CustomField>
    <fullName>DiagnosedDate__c</fullName>
    <label>DiagnosedDate</label>
    <type>Date</type>
    <length>255</length>
</CustomField>