OpenHealth/force-app/main/default/force-app/main/default/objects/Allergy__c/MedicalRecord__c.field-meta.xml
<CustomField>
    <fullName>MedicalRecord__c</fullName>
    <label>MedicalRecord</label>
    <type>Lookup</type>
    <referenceTo>MedicalRecord__c</referenceTo>
    <relationshipName>MedicalRecords</relationshipName>
</CustomField>