OpenHealth/force-app/main/default/force-app/main/default/objects/Allergy__c/Reaction__c.field-meta.xml
<CustomField>
    <fullName>Reaction__c</fullName>
    <label>Reaction</label>
    <type>Text</type>
    <length>255</length>
</CustomField>