OpenHealth/force-app/main/default/force-app/main/default/objects/Allergy__c/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>